--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<title>Café de Guatemala</title>
+	<title>El café</title>
+	<link rel="stylesheet" href="css/estilos.css">
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="X:\Cursos\Web_Frontend\CSS\elcafe\css\estilos.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href='https://fonts.googleapis.com/css?family=Aleo' rel='stylesheet'>
-	<link href="https://fonts.googleapis.com/css2?family=Anton&family=Jost&family=PT+Serif:ital@1&family=Quicksand&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <body>
-	<header><h1 class="titulo">El Café</h1></header>
-	<section id="contenido">
+<header>
+	<h1>
+		El café
+	</h1>
+</header>
+<section id="contenido">
 	<div id="resumen">
 		<p>Simplemente café...</p>
-		<img src="\img\cafe1.jpg" class="adaptativa-porcentaje-1"/>
+		<img src="imagenes/cafe.jpg">
 	</div>
-		<hr/>
-	<article><h1>El Café</h1><p>Energía de vida</p>
-		<img src="\img\cafe2.jpg" class="adaptativa-porcentaje-2"></article>
-	<article><h1>Café de montaña o de selva?</h1>
-	<p>Diferentes tipos de café...</p><img src="\img\cafe4.jpg"class="adaptativa-porcentaje-3"></article>
-	<article><h1>Café frio o caliente?</h1><p>Diferentes formas de preparación...</p><img src="\img\cafe3.jpg"class="adaptativa-porcentaje-4"></article>
-	</section>
-	<footer>Derechos reservados.</footer>
+	<hr>
+	<article>
+		<h1>El café</h1>
+		<p>Energía de vida...</p>
+		<img src="imagenes/cafe_grande.jpg">
+	</article>
 
+	<article>
+		<h1>Café de montaña o de selva?</h1>
+		<p>Diferentes tipos de café...</p>
+		<img src="imagenes/cafe_mediana.jpg">
+	</article>
+
+	<article>
+		<h1>Café frio o caliente?</h1>
+		<p>Diferentes forma de preparación...</p>
+		<img src="imagenes/cafe_pequena.jpg">
+	</article>
+</section>
+
+<footer>
+	Derechos Reservados
+</footer>
 </body>
 </html>
