--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 	<section id="contenido">
 	<div id="resumen">
 		<p>Simplemente café...</p>
-		<img src="\img\cafe1.jpg" class="adaptativa-porcentaje-1"/>
+		<img src="/img/cafe1.jpg" class="adaptativa-porcentaje-1"/>
 	</div>
 		<hr/>
 	<article><h1>El Café</h1><p>Energía de vida</p>
-		<img src="\img\cafe2.jpg" class="adaptativa-porcentaje-2"></article>
+		<img src="/img/cafe2.jpg" class="adaptativa-porcentaje-2"></article>
 	<article><h1>Café de montaña o de selva?</h1>
-	<p>Diferentes tipos de café...</p><img src="\img\cafe4.jpg"class="adaptativa-porcentaje-3"></article>
-	<article><h1>Café frio o caliente?</h1><p>Diferentes formas de preparación...</p><img src="\img\cafe3.jpg"class="adaptativa-porcentaje-4"></article>
+	<p>Diferentes tipos de café...</p><img src="/img/cafe4.jpg"class="adaptativa-porcentaje-3"></article>
+	<article><h1>Café frio o caliente?</h1><p>Diferentes formas de preparación...</p><img src="/img/cafe3.jpg"class="adaptativa-porcentaje-4"></article>
 	</section>
 	<footer>Derechos reservados.</footer>
 
