hoja de estilos
cambio de referencia

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Café de Guatemala</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="X:\Cursos\Web_Frontend\CSS\elcafe\css\estilos.css">
+	<link rel="stylesheet" type="text/css" href="/css/estilos.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Aleo' rel='stylesheet'>
 	<link href="https://fonts.googleapis.com/css2?family=Anton&family=Jost&family=PT+Serif:ital@1&family=Quicksand&family=Shadows+Into+Light&display=swap" rel="stylesheet">
